--- a/templates/inventory.j2
+++ b/templates/inventory.j2
@@ -1,3 +1,4 @@
+localhost
 admin_user={{ wares_admin_awx_username }}
 admin_password={{ wares_admin_awx_securepassword }}
 secret_key={{ wares_admin_awx_secretkey.stdout }}
