--- a/templates/inventory.j2
+++ b/templates/inventory.j2
@@ -1,5 +1,5 @@
 localhost
-connection=local
+ansible_connection=local
 #admin_user={{ wares_admin_awx_username }}
 #admin_password={{ wares_admin_awx_securepassword }}
 secret_key={{ wares_admin_awx_secretkey.stdout }}
